--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 ---
 layout: default
-title: Home
+title: Japser Voss Projects
+id: index
 
 ---
 
-<div class="home">
+<div class="row">
+  <div class="col-md-12">
 
-  <h1 class="page-heading">Jasper</h1>
-
-  <p>Jasper Voss projects is a lorem ipsum dolor si amet</p>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+    <img src="images/jv-cover.jpg" class="img-responsive main-image" alt="Jasper Voss Projects">
+  </div>
 
 </div>
