--- a/artist.html
+++ b/artist.html
@@ -13,13 +13,13 @@ id: artists
           <li><a href="artists/chris-alton">Chris Alton</a></li>
           <li><a href="artists/phoebe-baines">Phoebe Baines</a></li>
           <li><a href="artists/dickon-drury">Dickon Drury</a></li>
-          <li><a href="">Matt Girling</a></li>
+          <li><a href="artists/matt-girling">Matt Girling</a></li>
           <li><a href="artists/victoria-grenier">Victoria Grenier</a></li>
           <li><a href="artists/jonathan-kelly">Jonathan Kelly</a></li>
           <li><a href="artists/rosie-kennedy">Rosie Kennedy</a></li>
           <li><a href="artists/christopher-mayer">Christopher Mayer</a></li>
           <li><a href="artists/veronika-neukirsch">Veronika Neukirsch</a></li>
-          <li><a href="">Rosa Nussbaum</a></li>
+          <li><a href="artists/rosa-nussbaum">Rosa Nussbaum</a></li>
           <li><a href="artists/finn-thomson">Finn Thomson</a></li>
         </ul>
          
