--- a/about.html
+++ b/about.html
@@ -4,14 +4,22 @@ title: About
 id: about
 
 ---
+<h3>{{ page.title }}</h3>
+
+
 <div class="row">
-    <div class="col-md-6">
-      <p>Jasper Voss (b.1978) studied anthropology at the University of Heidelberg, followed by History of Art at The Courtauld Institute, London. 
+    <div class="col-md-12">
+      <span class="blurry-text"><h4>Japser Voss</h4></span>
+      <p>Jasper Voss (b.1978) studied anthropology at the University of Heidelberg, followed by History of Art at The Courtauld Institute, London.</br>
 
-      In 2008 he was made artistic director of the Faschingbauer-Schloss Collection, where he curated notable exhibitions ‘I’m Here and It’s Now’ and ‘P-P-P-Post’.
-
+      In 2008 he was made artistic director of the Faschingbauer-Schloss Collection, where he curated notable exhibitions ‘I’m Here and It’s Now’ and ‘P-P-P-Post’.</br>
       Voss left The F-S Collection in 2013 to become a freelance writer andto pursue Jasper Voss Projects.
-
       </p>
+    </div>
+ </div>
+ <div class="row">
+    <div class="col-md-4">
+      <h4>Contact</h4>
+      <p>jaspervossprojects@gmail.com</p>
     </div>
   </div>
