--- a/artists/dickon-drury/index.html
+++ b/artists/dickon-drury/index.html
@@ -97,7 +97,7 @@ title: Dickon Drury
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                <p>Born 1986, Lives and works in London.s</p> 
+                <p>Born 1986, Lives and works in London.</p> 
               </div>
             </div>
           </div>
