fixed typo on about page and made a video autoplay on rn artists page.

--- a/artists/rosa-nussbaum/index.html
+++ b/artists/rosa-nussbaum/index.html
@@ -17,7 +17,7 @@ title: Rosa Nussbaum
                    
                     <div class="item active">
                       <div class="embed-responsive embed-responsive-16by9">
-                         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/116142780" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/116142780">Rosa For America Campaign Compilation</a> from <a href="https://vimeo.com/user14511007">Rosa Nussbaum</a> on <a href="https://vimeo.com">Vimeo</a>.</p> <p>A selection of footage from speeches and campaign events leading up to and surrounding the 2014 election held at the Wimbledon College of Arts degree Show</p>
+                         <iframe class="embed-responsive-item"src="https://player.vimeo.com/video/116142780?autoplay=1&color=ffffff&byline=0&portrait=0" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p>A selection of footage from speeches and campaign events leading up to and surrounding the 2014 election held at the Wimbledon College of Arts degree Show</p>
                         </div>
                       <div class="carousel-caption">                       
                       </div>
