fixed safari scaling issues by delting css

--- a/artists/rosa-nussbaum/index.html
+++ b/artists/rosa-nussbaum/index.html
@@ -129,7 +129,7 @@ title: Rosa Nussbaum
             <div class="panel-heading" role="tab" id="headingTwo">
               <h4 class="panel-title">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Group Exhibitions
+                 Exhibitions
                 </a>
               </h4>
             </div>
