udated artist information texts

--- a/artists/chris-alton/index.html
+++ b/artists/chris-alton/index.html
@@ -104,7 +104,7 @@ Referendum, 2014</p>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                2014, BA (Hons) Fine Art, Middlesex University 
+                2011-2014 Middlesex University, BA (Hons) Fine Art 
               </div>
             </div>
           </div>
@@ -118,17 +118,22 @@ Referendum, 2014</p>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
-              Loading Mercury with a Pitchfork, Nice Gallery, South Wimbledon, London, June 2015, curated by Chris Alton</br>
-              Tan Like That, Camden, London, January 2015</br>
-              Collyer Bristow Graduate Award and Exhibition 2014, Collyer Bristow Gallery, London, October 2014 - January 2015</br>
-              A Europe for All by All, Hundred Years Gallery, Hoxton, London, April 2014</br>
-              PAUSE, Beaconsfield, London, March 2014</br>
-              Exuberant Politics, Public Space One, Iowa City, Iowa, March/April 2014</br>
-              STATE, The Atrium Gallery, Middlesex University, London, March 2014</br>
-              TEDxEastEnd: Society Beyond Borders, Oval Space, Bethnal Green, London, January 2014</br>
-              Q-Art: The Big Crit, APT Gallery, Deptford, London, December 2013</br>
-              The Common, Islington Arts Factory, Islington, London, September 2013*</br>
-              Coming Home, Harbour Arm Gallery, Margate, July 2013</br>
+              2015</br>
+              Loading Mercury with a Pitchfork, Nice Gallery, South Wimbledon, London, curated by Chris Alton</br>
+              Tan Like That, Camden, London</br>
+              
+              2014</br>
+              Collyer Bristow Graduate Award and Exhibition 2014, Collyer Bristow Gallery, London</br>
+              A Europe for All by All, Hundred Years Gallery, Hoxton, London</br>
+              PAUSE, Beaconsfield, London</br>
+              Exuberant Politics, Public Space One, Iowa City, Iowa</br>
+              STATE, The Atrium Gallery, Middlesex University, London</br>
+              TEDxEastEnd: Society Beyond Borders, Oval Space, Bethnal Green, London</br>
+              
+              2013</br>
+              Q-Art: The Big Crit, APT Gallery, Deptford, London</br>
+              The Common, Islington Arts Factory, Islington, London*</br>
+              Coming Home, Harbour Arm Gallery, Margate</br>
               <div class="footnote"><p>*as part of The Common, a collaborative practice of 6 artists.</p></div>
               </div>
             </div>
