--- a/artists/jonathan-kelly/index.html
+++ b/artists/jonathan-kelly/index.html
@@ -89,14 +89,12 @@ title: Jonathan Kelly
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <p>
-                2014 – 2017	Royal Academy Schools, London, Postgraduate Diploma in Fine Art
+                2014 – 2017	Royal Academy Schools, Postgraduate Diploma in Fine Art
                 </p>
                 <p>
-                2008 - 2011	Wimbledon College of Art, London
+                2008 - 2011	Wimbledon College of Art, BA (Hons) Fine Art: Painting
                 </p>
-                <p>
-                BA (Hons) Fine Art: Painting (2:1) 
-                </p>
+                
               </div>
             </div>
           </div>
@@ -112,20 +110,24 @@ title: Jonathan Kelly
               <div class="panel-body">
               <h4>Solo</h4>
               <p>
-              2014	‘Open Studio’, Griffin Gallery Studio, Shepherd’s Bush, London</br>
-              2012	‘Eureka Lemon’ Construction Gallery, Tooting, London [collaboration with Declan Jenkins],
+              2014	Open Studio, Griffin Gallery Studio, Shepherd’s Bush, London</br>
+              2012	Eureka Lemon, Construction Gallery, Tooting, London (collaboration with Declan Jenkins)
               </p>
               <h4>Group</h4>
               <p>
-              2014		‘Have We Met Before?’, John Martin Gallery, Mayfair, London</br>
-              2014	‘Freedom To..’ [Take Me Home projects], West Norwood Library, West Norwood, London</br>
-              2013		‘Help’, Six Gallery, Bournemouth</br>
-              2013	‘FACK West London Art Prize’, The Griffin Gallery, Shepherd’s Bush, London</br>
-              2012	‘Exhibition One’, Continental Operations Gallery at Richmix, Shoreditch, London</br>
-              2011		‘London Group Open’, The Cello Factory, Waterloo, London</br>
-              2011		‘Metamorphose’, Islington Arts Factory, London</br>
-              2011		‘Salon Art Prize’, Matt Roberts Gallery, Vyner Street, London</br>
-              2011 		‘Clyde and Community Art Awards Exhibition’, St. Botolph Building, Aldgate</br>
+              2014</br>	
+              Have We Met Before?, John Martin Gallery, Mayfair, London</br>
+              Freedom To.., Take Me Home Projects, West Norwood Library, West Norwood, London</br>
+              2013</br>
+              Help, Six Gallery, Bournemouth</br>
+              FACK West London Art Prize, The Griffin Gallery, Shepherd’s Bush, London</br>
+              2012</br>
+              Exhibition One, Continental Operations Gallery at Richmix, Shoreditch, London</br>
+              2011</br>
+              London Group Open, The Cello Factory, Waterloo, London</br>
+              Metamorphose, Islington Arts Factory, London</br>
+              Salon Art Prize, Matt Roberts Gallery, Vyner Street, London</br>
+              Clyde and Community Art Awards Exhibition, St. Botolph Building, Aldgate</br>
               </p>      
               </div>
             </div>
@@ -142,8 +144,8 @@ title: Jonathan Kelly
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <p>
-                2014	‘FACK Residency’, Griffin Gallery, Shepherds Bush, London </br>
-                [Selected by Phillip Allen, Rebecca Pelly-Fry, Christopher Pensa and Julian Wild]
+                2014	FACK Residency, Griffin Gallery, Shepherds Bush, London </br>
+                (Selected by Phillip Allen, Rebecca Pelly-Fry, Christopher Pensa and Julian Wild)
                 </p>
               </div>
             </div>
