--- a/artists/phoebe-baines/index.html
+++ b/artists/phoebe-baines/index.html
@@ -107,9 +107,9 @@ title: Phoebe Baines
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-               MA Sculpture | Royal College of Art | 2014 - 2016</br>
-               BA Fine Art : Sculpture | First Class Honours Degree |Wimbledon College of Art | 2011 - 2014</br>
-               Fine Art Foundation Diploma | Byam Shaw College of Art | 2010 - 2011
+               2014-2016 Royal College of Art, MA Sculpture</br>
+               2011-2014 Wimbledon College of Art, BA Fine Art: Sculpture</br>
+               2010-2011 Byam Shaw College of Art, Fine Art Foundation Diploma 
               </div>
             </div>
           </div>
@@ -123,39 +123,41 @@ title: Phoebe Baines
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
+              <h4>Solo</h4>
+              2015 PCBB@GRRG, Solo Exhibition of 'Urbex' Installation, GRRG, London</br>
+              </p>
               <h4>2015</h4>
               <p>
-              'RCA Secret'. Royal College of Art, Dyson Gallery, London</br>
-              'I'm Going Where The Weather Suits My Clothes'. Royal College of Art, London</br>
-              'RCA Edinburgh Exhibition', Edinburgh Sculpture Court, Edinburgh</br>
-              'PCBB@GRRG', Solo Exhibition of 'Urbex' Installation, GRRG, London</br>
-              'RCA WIP Show Open House', Royal College of Art, London</br>
+              RCA Secret, Royal College of Art, Dyson Gallery, London</br>
+              I'm Going Where The Weather Suits My Clothes, Royal College of Art, London</br>
+              RCA Edinburgh Exhibition, Edinburgh Sculpture Court, Edinburgh</br>
+              RCA WIP Show Open House, Royal College of Art, London</br>
               </p>
               <h4>2014</h4>
               <p>
-              'DenSE' , PS1 Royal College of Art.
-              'Wimbledon College of Art Undergraduate Degree Show', Wimbledon College of Art, London</br>
-              'Drawing To a Close' , Wimbledon College of Art, London</br> 
-              '1800' CCW, The Bear , Camberwell, London</br>
-              'Recreation Ground' , Wimbledon College of Art , London. Curated by Ellen De Wachter</br>
-              'Assimble, Assamble, Assomble', Group Interim show at Wimbledon College of Art, London</br>
+              DenSE, PS1 Royal College of Art.
+              Wimbledon College of Art Undergraduate Degree Show, Wimbledon College of Art, London</br>
+              Drawing To a Close, Wimbledon College of Art, London</br> 
+              1800 CCW, The Bear, Camberwell, London</br>
+              Recreation Ground, Wimbledon College of Art , London. Curated by Ellen De Wachter</br>
+              Assimble, Assamble, Assomble, Group Interim show at Wimbledon College of Art, London</br>
               </p>
               <h4>2013</h4>
               <p>
-              ‘Space Cadets’, Wimbledon College of Art, London</br> 
-              ‘1800’ CCW, Morgue space in Chelsea College of Art, London</br>  
-              ‘Heavy Metal’, Wimbledon College of Art, Metal Hangar space, London</br>  
-              ‘Wimbledon Arts’, The Curzon Gallery, Wimbledon Village, London</br> 
-              ‘Brouhaha’, Kings Street, Cambridge</br> 
-              ‘Not a White Cube’, Asylum Chapel, Peckham, London</br>  
-              ‘Waning Lyrical’, The Flying Dutchman, Peckham, London</br> 
-              ‘Name of Show’, Wimbledon Town Library, London</br>  
-              ‘1800’, Chelsea College of Art , London</br> 
-              ‘Draw/Don’t Draw’, Wimbledon College of Art, London</br> 
+              Space Cadets, Wimbledon College of Art, London</br> 
+              1800 CCW, Morgue Space in Chelsea College of Art, London</br>  
+              Heavy Metal, Wimbledon College of Art, Metal Hangar space, London</br>  
+              Wimbledon Arts, The Curzon Gallery, Wimbledon Village, London</br> 
+              Brouhaha, Kings Street, Cambridge</br> 
+              Not a White Cube, Asylum Chapel, Peckham, London</br>  
+              Waning Lyrical, The Flying Dutchman, Peckham, London</br> 
+              Name of Show, Wimbledon Town Library, London</br>  
+              1800, Chelsea College of Art , London</br> 
+              Draw/Don’t Draw, Wimbledon College of Art, London</br> 
               </p>
               <h4>2012</h4>
               <p>
-              ‘MilesKM’, Bussey Building, Peckham, London
+              MilesKM, The Bussey Building, Peckham, London
               </p>
               </div>
             </div>
@@ -165,13 +167,27 @@ title: Phoebe Baines
             <div class="panel-heading" role="tab" id="headingThree">
               <h4 class="panel-title">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Individual Projects
+                  Awards
                 </a>
               </h4>
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                <p>'PCBB@GRRG', Installation exhibited in the GRRG space in Kennington, London.</p>
+               <p>2013 The Mead Scholarship</p> 
+              </div>
+            </div>
+          </div>
+          
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFour">
+              <h4 class="panel-title">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Individual Projects
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+              <div class="panel-body">
                 <p>‘Down not Up’, An ongoing project sponsored by the Mead Scholarship. A series of site-specific installations and sculptural experiments in various rural locations. Gratwicke Farm, Sussex, and the Marysport Estuary in Cumbria, Lake District.</p>
                 <p>'Urban Field’, An outdoor temporary installation in Selly Oak, Birmingham.</p> 
               </div>
@@ -179,14 +195,14 @@ title: Phoebe Baines
           </div>
           
            <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingFour">
+            <div class="panel-heading" role="tab" id="headingFive">
               <h4 class="panel-title">
-                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                   Publications
                 </a>
               </h4>
             </div>
-            <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+            <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
                 <h4>2015</h4>
                 <p>
@@ -197,15 +213,6 @@ title: Phoebe Baines
 
                 </p>
                 <h4>2014</h4>
-                <p>
-                Degree show interview with Phoebe Baines for Wimbledon UAL marketing, May 2014</br>
-                <a href="http://https://www.youtube.com/watch?v=X2603OROWc0">youtube.com</a>
-                </p>
-                <h4>2013</h4>
-                <p>
-                Gola's Born In Britain, Artist Profile , November 2013.</br>
-                <a href="http://www.gola.co.uk/borninbritain/phoebe-baines">gola.co.uk</a>
-                </p>
                 <p>
                 Mead Scholarship and Fellowship Winners Announced, August 2013</br>
                 <a href="http://newsevents.arts.ac.uk/37575/mead-scholarship-and-fellowship-winners-announced/">newsevents.arts.ac.uk</a>
