--- a/artists/rosa-nussbaum/index.html
+++ b/artists/rosa-nussbaum/index.html
@@ -117,10 +117,10 @@ title: Rosa Nussbaum
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <p>
-                BA Fine Art Print and Time Based Media | Wimbledon College of Art, 2014 
+                2012-2014 Wimbledon College of Art, BA Fine Art: Print and Time Based Media 
                 </p>
                 <p>
-                Foundation Art and Design | Oxford Brookes University, 2011
+                2010-2011 Oxford Brookes University, Foundation Art and Design 
                 </p>
               </div>
             </div>
@@ -137,38 +137,38 @@ title: Rosa Nussbaum
               <div class="panel-body">
               <h4>2015</h4>
               <p>
-              JUST BECAUSE| Performance Night at the Chalk Farm Mini Market | May</br>
-              Green| A Cheap Drinks Exhibition| Chalk Farm Mini Market | May</br> 
-              Art@CMS| Fermilab Art Gallery | Feb - April </br>
-              Demimonde | Amberwood House, South Kensington |January</br> 
-              CERN | Shoreditch Trust | November 2014- Feb 2015</br> 
+              JUST BECAUSE, Performance Night at the Chalk Farm Mini Market</br>
+              Green, A Cheap Drinks Exhibition, Chalk Farm Mini Market</br> 
+              Art@CMS, Fermilab Art Gallery, Chicago, USA  </br>
+              Demimonde, Amberwood House, South Kensington. Curated by Slate Projects</br> 
+              CERN, Shoreditch Trust, London </br> 
               </p>
               <h4>2014</h4>
               <p>
-              Recent Graduate Showcase | Affordable Art Fair | October</br> 
-              Short Film Festival | BFI Auditorium | 10-22 October</br>
-              FROM: different contemporary approaches in art education | Harts Lane Studios | September </br> 
-              Baldwin’s Nigger Reloaded | Iniva | August</br>
-              Wimbledon Degree Show 2014 | June </br>
-              Pre Show // Degree Show | Arts Admin - Toynbee Studios | April </br>
-              Crack In the Road Live #3 | The Bussey Building, Peckham | March</br>
+              Recent Graduate Showcase, Affordable Art Fair</br> 
+              Short Film Festival, BFI Auditorium</br>
+              FROM: different contemporary approaches in art education, Harts Lane Studios, New Cross</br> 
+              Baldwin’s Nigger Reloaded, Iniva, London</br>
+              Wimbledon Degree Show 2014</br>
+              Pre Show // Degree Show, Arts Admin, Toynbee Studios</br>
+              Crack In the Road Live #3, The Bussey Building, Peckham</br>
               </p>
               </h4>2013</h4>
               <p>
-              On/Off | Vibe Gallery, Bermondsey | December</br>
-              Hype| Chelsea College of Art and Design | September</br>
-              Brouhaha | Changing Spaces, Cambridge | August</br>
-              Waning Lyrical | The Flying Dutchman | July</br>
-              Not A White Cube | Asylum, Caroline Gardens Chapel |June</br>
+              On/Off, Vibe Gallery, Bermondsey</br>
+              Hype, Chelsea College of Art and Design</br>
+              Brouhaha, Changing Spaces, Cambridge</br>
+              Waning Lyrical, The Flying Dutchman, Camberwell</br>
+              Not A White Cube, Asylum, Caroline Gardens Chapel, Peckham</br>
               </p>
               <h4>2012</h4>
               <p>
-              The Space We Live In |The Old Fire Station, Oxford | September</br>
-              I HAVE THE RIGHT | Picture Art Foundation, California State University, Dominguez Hills | November 2011 - Late Summer 2012 
+              The Space We Live In, The Old Fire Station, Oxford</br>
+              I HAVE THE RIGHT, Picture Art Foundation, California State University, Dominguez Hills, USA
               </p>
               <h4>2011</h4>
               <p>
-              Gallimaufry | Pitt Rivers Museum in Oxford | February 3rd
+              Gallimaufry, Pitt Rivers Museum, Oxford
               </p>
               </div>
             </div>
@@ -185,13 +185,14 @@ title: Rosa Nussbaum
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <h4>Upcoming</h4>
-                <p>July/August 2015 | Hay Studios Cornwall | Discursive camping trip</br>
-                June 2015 | Sophie Chapman's Loo | one day residency/exhibition in Sophie's house's loo</p>
+                <p>July/August 2015 | Hay Studios Cornwall, Discursive camping trip with Floating Platform</br>
+                
                 <h4>Past</h4>
                 <p>
-                September 2014 | Iniva | Residency & Open Studio 11-27 Sept with SorryYouFeelUncomfortable Collective</br>
-                August 2014 | CERN, Switzerland | residency in cooperation with CERN, UAL and the Shoreditch Trust </br>
-                March 2014 | Thames Tower | four week group residency with Departure Foundation</br>
+                June 2015 | Sophie Chapman's Loo, one day residency/exhibition in Sophie's house's loo</p>
+                September 2014 | Iniva, Residency & Open Studio with SorryYouFeelUncomfortable Collective</br>
+                August 2014 | CERN, Switzerland,residency in cooperation with CERN, UAL and the Shoreditch Trust </br>
+                March 2014 | Thames Tower, Hammersmith, four week group residency with Departure Foundation</br>
                 </p>
               </div>
             </div>
@@ -208,10 +209,10 @@ title: Rosa Nussbaum
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <p>
-                2014 | Wandle Studio Prize| Wimbledon College of Art/Merton Abbey Mills
+                2014 | Wandle Studio Prize, Wimbledon College of Art/Merton Abbey Mills
                 </p>
                 <p>
-                2014 | MFI Graduate Award | Flat Time House
+                2014 | MFI Graduate Award, Flat Time House
                 </p>
                 <p>
                 2012 | Student Community Fund award for The Space We Live In
