--- a/artists/rosie-kennedy/index.html
+++ b/artists/rosie-kennedy/index.html
@@ -85,7 +85,7 @@ title: Rosie Kennedy
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                <p>BA Hons, Fine Art PaintingCamberwell College of Arts, 2010-2013 </p>
+                <p>2010-2013 Camberwell College of Arts, BA Fine Art Painting  </p>
               </div>
             </div>
           </div>
@@ -100,15 +100,19 @@ title: Rosie Kennedy
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
               <p>
-              2014 Over and Out, Imperial Works - Forest Hill, London</br>
-              2014 Resolution, Malgras | Naudet - Manchester</br>
-              2013 Saatchi New Sensations, Location House - Holborn, London</br>
-              2013 Camberwell Degree Show 2013 - Camberwell, London</br>
-              2012 Bull at the Bear, The Bear - Camberwell, London</br>
-              2012 BA-SE, Shoreditch Town Hall - Shoreditch, London</br>
-              2012 '59' The Pigeon Wing - South Bermondsey, London</br>
-              2011 CLASHANDCONVERGE II, Camberwell Space - Camberwell, London</br>
-              2011 Crypt Sculpture, Camberwell Church Crypt - Camberwell, London</br>
+              <h4>2014</h4> 
+              Over and Out, Imperial Works, Forest Hill, London</br>
+              Resolution, Malgras Naudet, Manchester</br>
+              <h4>2013</h4> 
+              Saatchi New Sensations, Location House, Holborn, London</br>
+              Camberwell Degree Show 2013, Camberwell, London</br>
+              <h4>2012</h4> 
+              Bull at the Bear, The Bear, Camberwell, London</br>
+              BA-SE, Shoreditch Town Hall, Shoreditch, London</br>
+              '59' The Pigeon Wing, South Bermondsey, London</br>
+              <h4>2011</h4> 
+              CLASHANDCONVERGE II, Camberwell Space, Camberwell, London</br>
+              Crypt Sculpture, Camberwell Church Crypt, Camberwell, London</br>
               </p>
               </div>
             </div>
