--- a/artists/victoria-grenier/index.html
+++ b/artists/victoria-grenier/index.html
@@ -97,7 +97,7 @@ title: Victoria Grenier
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                2013, B.A. Sculpture, Wimbledon College of Art, London
+                2011-2013 Wimbledon College of Art, BA Sculpture
               </div>
             </div>
           </div>
@@ -112,23 +112,32 @@ title: Victoria Grenier
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
               <h4>Solo</h4>
-              <p>“Is It a bird? Is it a plane? Yes, it’s a weird dolphin person”, Nice Gallery, London 2015</p>
+              <p>2015 Is It a bird? Is it a plane? Yes, it’s a weird dolphin person, Nice Gallery, London</p>
               <h4>Group</h4>
-              <p>“Talentness, Talentless & co”, screening at The Drafthouse, London 2015</br>
-                  “Nice Movie Night”, The Gorringe Park, London 2014</br>
-                  “Bloomberg New Contemporaries 2014”, ICA, London,  World Museum, Liverpool, The Exchange, Cornwall 2014</br>
-                  “On/Off”, curated by Kayleigh Handley, Vibe Gallery, London 2013</br> 
-                  “BROUHAHA”, Changing Spaces, Cambridge 2013</br>
-                  “Demand for boobs (…) digital software mapping”, curated by Soraya Rodriguez, Wimbledon College of Art, London 2013</br>
-                  “Ladderdoor”, Wimbledon College of Art, London 2012</br>
-                  “Drawn Out”, The Flying Dutchman, London 2012</br>
-                  “PARK 12”, curated by Juliette Haysom, Cannizaro Park, London 2012</br>
-                  “MilesKm”, Bussey Building, Peckham, London 2012</br>
-                  “Expanding Fields” workshop by AIR, Archway, London 2011</br>
-                  “Things done before, during, but probably not after, the 17th of 3rd 2011”, Wimbledon College of Art Drawing Centre 2011</br>
-                  “1071mi=1724km”, La Tabacalera, Madrid 2011</br>
+              <h4>2015</h4>
+              <p>Talentness, Talentless & co, screening at The Drafthouse, London</br>
+              </p>
+              <h4>2014</h4>		
+              <p>Nice Movie Night, The Gorringe Park, London</br>
+              Bloomberg New Contemporaries 2014, ICA, London,  World Museum, Liverpool, The Exchange, Cornwall</br>
+              </p>
+              <h4>2013</h4>
+              <p>On/Off, curated by Kayleigh Handley, Vibe Gallery, London</br> 
+              BROUHAHA, Changing Spaces, Cambridge</br>
+              Demand for boobs (…) digital software mapping, curated by Soraya Rodriguez, Wimbledon College of Art, London</br>
+              </p>
+              <h4>2012</h4>
+              <p>Ladderdoor, Wimbledon College of Art, London</br>
+              Drawn Out, The Flying Dutchman, Camberwell, London</br>
+              PARK 12, curated by Juliet Haysom, Cannizaro Park, London</br>
+              MilesKm, The Bussey Building, Peckham, London</br>
+              </p>
+              <h4>2011</h4>    
+              <p>Expanding Fields, workshop by AIR, Archway, London</br>
+              Things done before, during, but probably not after, the 17th of 3rd 2011”, Wimbledon College of Art Drawing Centre</br>
+              1071mi=1724km, La Tabacalera, Madrid</br>
                   </p>
-              <div class="footnote"><p>*as part of The Common, a collaborative practice of 6 artists.</p></div>
+            
               </div>
             </div>
           </div>
