--- a/artists/rosa-nussbaum/index.html
+++ b/artists/rosa-nussbaum/index.html
@@ -17,7 +17,8 @@ title: Rosa Nussbaum
                    
                     <div class="item active">
                       <div class="embed-responsive embed-responsive-16by9">
-                         <iframe class="embed-responsive-item"src="https://player.vimeo.com/video/116142780?autoplay=1&color=ffffff&byline=0&portrait=0" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p>A selection of footage from speeches and campaign events leading up to and surrounding the 2014 election held at the Wimbledon College of Arts degree Show</p>
+                         <iframe src="https://player.vimeo.com/video/116142780?color=ffffff&byline=0&portrait=0" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p>A selection of footage from speeches and campaign events leading up to and surrounding the 2014 election held at the Wimbledon College of Arts degree Show</p>
                         </div>
                       <div class="carousel-caption">                       
                       </div>
