Camilla Bliss has been added and spelling correction Veronika's name

--- a/artist.html
+++ b/artist.html
@@ -12,13 +12,14 @@ id: artists
         <ul class="artist-list nav">
           <li><a href="artists/chris-alton">Chris Alton</a></li>
           <li><a href="artists/phoebe-baines">Phoebe Baines</a></li>
+          <li><a href="artists/camilla-bliss">Camilla Bliss</a></li>
           <li><a href="artists/dickon-drury">Dickon Drury</a></li>
           <li><a href="artists/matt-girling">Matt Girling</a></li>
           <li><a href="artists/victoria-grenier">Victoria Grenier</a></li>
           <li><a href="artists/jonathan-kelly">Jonathan Kelly</a></li>
           <li><a href="artists/rosie-kennedy">Rosie Kennedy</a></li>
           <li><a href="artists/christopher-mayer">Christopher Mayer</a></li>
-          <li><a href="artists/veronika-neukirsch">Veronika Neukirsch</a></li>
+          <li><a href="artists/veronika-neukirch">Veronika Neukirch</a></li>
           <li><a href="artists/rosa-nussbaum">Rosa Nussbaum</a></li>
           <li><a href="artists/finn-thomson">Finn Thomson</a></li>
         </ul>
