fixed videos in carousels playing when on other slide. updated Rosa Nussbaum artists page.

--- a/artists/victoria-grenier/index.html
+++ b/artists/victoria-grenier/index.html
@@ -16,7 +16,7 @@ title: Victoria Grenier
                   <div class="carousel-inner" role="listbox">
                     <div class="item active">
                     <div class="embed-responsive embed-responsive-16by9">
-                       <iframe class="embed-responsive-item"src="https://player.vimeo.com/video/67745245" width="725" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                       <iframe class="embed-responsive-item vimeo-embed"src="https://player.vimeo.com/video/67745245" width="725" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                        </div>
                        <div class="carousel-caption">
                         <p>Bananasplit</p>
@@ -34,7 +34,7 @@ title: Victoria Grenier
                     <div class="item">
                     <div class="embed-responsive embed-responsive-16by9">
 
-                       <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/67716301" width="725" height="750" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+                       <iframe class="embed-responsive-item vimeo-embed" src="https://player.vimeo.com/video/67716301" width="725" height="750" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
                        </div>
                       <div class="carousel-caption">
                         <p>Dead Sheep Talking</p>
@@ -52,7 +52,7 @@ title: Victoria Grenier
                 <div class="item">
                        <div class="embed-responsive embed-responsive-16by9">
 
-                       <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/118641290" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/118641290">Life in the Cosmic Bush</a> from <a href="https://vimeo.com/user18757874">Victoria Grenier</a> on <a href="https://vimeo.com">Vimeo</a>.</p> <p>After effects technician: Bruno Valente</p>
+                       <iframe class="embed-responsive-item vimeo-embed" src="https://player.vimeo.com/video/118641290" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/118641290">Life in the Cosmic Bush</a> from <a href="https://vimeo.com/user18757874">Victoria Grenier</a> on <a href="https://vimeo.com">Vimeo</a>.</p> <p>After effects technician: Bruno Valente</p>
                        </div>
                       <div class="carousel-caption">
                         <p>Life In The Cosmic Bush</p>
