exhibitions page edit again  Please enter the commit message for your changes. Lines starting

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -11,7 +11,7 @@ id: exhibitions
      
 			<h3>Upcoming Exhibitions</h3>
 			
-      	<p><b><u>'Rosie Kennedy'</b></u>
+      	<p><b><u>Rosie Kennedy: 'Custom-Made'</b></u></br>
       	Private View Friday 29th January. Show continues by appointment until Wednesday 3rd February</br>
       	The Benevolent Association of Excellent Solutions (B.A.E.S), Deptford</br>
       	http://thebenevolentassociationofexcellentsolutions.co.uk</br>
@@ -22,6 +22,9 @@ id: exhibitions
       <h3>Past Exhibitions</h3>
       	<p><b><u>'GAME OVER: Play On'</b></u>	
       	<b>Chris Alton / Phoebe Baines / Dickon Drury / Victoria Grenier / Christopher Lawrence</b></br>
+      	<span><a href="Users/nancyallen/Documents/Jasper/WEBSITE/Play exhibition.pdf">GAME OVER: Play On (PDF)</a> </span>
+  
+</object>
 			</p>
       
   </div>
