--- a/exhibitions.html
+++ b/exhibitions.html
@@ -22,7 +22,7 @@ id: exhibitions
       <h3>Past Exhibitions</h3>
       	<p><b><u>'GAME OVER: Play On'</b></u>	
       	<b>Chris Alton / Phoebe Baines / Dickon Drury / Victoria Grenier / Christopher Lawrence</b></br>
-      	<span><a href="Users/nancyallen/Documents/Jasper/WEBSITE/Play exhibition.pdf">GAME OVER: Play On (PDF)</a> </span>
+      	<span><a href="https://www.scribd.com/doc/296693206/GAME-OVER-Play-On">GAME OVER: Play On (PDF)</a> </span>
   
 </object>
 			</p>
