--- a/exhibitions/game-over/game-over.html
+++ b/exhibitions/game-over/game-over.html
@@ -58,12 +58,20 @@ title: GAME OVER Play On
                 	<p>'Shadow Hound, Dickon Drury'</p>
     				</div>
     		</div>
+    		
+    		<div class="row">
+  				<div class="col-md-12">
+							<img src="images/game-over-9.jpg" class="img-responsive" alt="Chris Alton a shared interest in the bounce">		
+    					<div class="caption">
+    						<p>'a shared interest in the bounce', Chris Alton</p>
+    				</div>
+    		</div>
     	
     		<div class="row">
   				<div class="col-md-12">
 							<img src="images/game-over-5.jpg" class="img-responsive" alt="Phoebe Baines May the Best Man Win">		
     					<div class="caption">
-    						<p>'May the Best Man Win', Phoebe Baines</p>
+    						<p>'May the Best Man Win',, Phoebe Baines</p>
     				</div>
     		</div>
 
