--- a/exhibitions.html
+++ b/exhibitions.html
@@ -11,8 +11,8 @@ id: exhibitions
      
 			<h3>Upcoming Exhibitions</h3>
 			
-      	<p><b>Victoria Grenier: Sand Cities of the Earth</b></br>
-      	Private View Friday 15th April, Hutt Collective, Nottingham.</br>
+      	<p><b>Victoria Grenier: Sand Cities</b></br>
+      	Private View Friday 15th April, Hutt Collective, Nottingham</br>
       	http://www.huttcollective.com</br>
       	
       	<p>Victoria Grenier will present a new body of work considering the imagined consciousness of a pair of Mesopotamian lion sculptures.</p>
